--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,5 @@ VeespoFramework.embeddedframework/VeespoFramework.framework/Versions/A/Resources
 VeespoFramework.embeddedframework/VeespoFramework.framework/Versions/A/Resources/Resources.bundle/Images/Veespo/livelli cella/5.png
 Veespo-Keys.plist
 Breakpoints_v2.xcbkptlist
+Veespo/Tools/TestFlightSDK2.0.2/README.md
+Veespo/Tools/TestFlightSDK2.0.2/release_notes.md
