Adding a list of the average votes in venue detail view.

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ Veespo-Keys.plist
 Breakpoints_v2.xcbkptlist
 Veespo/Tools/TestFlightSDK2.0.2/README.md
 Veespo/Tools/TestFlightSDK2.0.2/release_notes.md
+UserInterfaceState.xcuserstate
