Reorder project (external libraries)

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ Breakpoints_v2.xcbkptlist
 Veespo/Tools/TestFlightSDK2.0.2/README.md
 Veespo/Tools/TestFlightSDK2.0.2/release_notes.md
 UserInterfaceState.xcuserstate
+UserInterfaceState (Copia in conflitto di MacBook-Pro-di-Alessio-2 2013-12-05).xcuserstate
