--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,7 @@ VeespoFramework.embeddedframework/VeespoFramework.framework/Versions/A/Resources
 VeespoFramework.embeddedframework/VeespoFramework.framework/Versions/A/Resources/Resources.bundle/Images/Veespo/livelli cella/5.png
 Veespo-Keys.plist
 Breakpoints_v2.xcbkptlist
-Veespo/Tools/TestFlightSDK2.0.2/README.md
-Veespo/Tools/TestFlightSDK2.0.2/release_notes.md
+Veespo/Tools/TestFlightSDK2.0.2/*
+Veespo/Tools/TestFlightSDK2.0.2/*
 UserInterfaceState.xcuserstate
 UserInterfaceState (Copia in conflitto di MacBook-Pro-di-Alessio-2 2013-12-05).xcuserstate
