--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ Veespo-Keys.plist
 Breakpoints_v2.xcbkptlist
 UserInterfaceState.xcuserstate
 UserInterfaceState (Copia in conflitto di MacBook-Pro-di-Alessio-2 2013-12-05).xcuserstate
+VeespoTests.m
