Implement new Veespo Framework functions: API wrapper.

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ Breakpoints_v2.xcbkptlist
 UserInterfaceState.xcuserstate
 UserInterfaceState (Copia in conflitto di MacBook-Pro-di-Alessio-2 2013-12-05).xcuserstate
 VeespoTests.m
+Veespo.xccheckout
