--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@ Veespo/Tools/TestFlightSDK2.0.2/TestFlight.h
 Veespo/Tools/TestFlightSDK2.0.2/libTestFlight.a
 Veespo/Tools/TestFlightSDK2.0.2/release_notes.md
 
+Veespo.xccheckout
