Improve LookBack's framework management.
Change Veespo userId logic.

--- a/Veespo/Supporting Files/VEEFPropertyList.plist
+++ b/Veespo/Supporting Files/VEEFPropertyList.plist
@@ -37,9 +37,9 @@
 					<key>veespo_lite_app</key>
 					<string>1d7800</string>
 					<key>cibi</key>
-					<string>42B6E8</string>
+					<string>1d7800</string>
 					<key>localinotturni</key>
-					<string>c1ddff</string>
+					<string>42B6E8</string>
 					<key>news</key>
 					<string>ff6440</string>
 				</dict>
