--- a/Veespo/Veespo-Info.plist
+++ b/Veespo/Veespo-Info.plist
@@ -28,17 +28,20 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>Beta 1.4.0</string>
+	<string>Beta 1.4.1.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>Beta 1.4.0</string>
+	<string>Beta 1.4.1.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MKDirectionsApplicationSupportedModes</key>
 	<array>
 		<string>MKDirectionsModeBike</string>
+		<string>MKDirectionsModeBus</string>
 		<string>MKDirectionsModePedestrian</string>
+		<string>MKDirectionsModeSubway</string>
+		<string>MKDirectionsModeTaxi</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
