--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,14 @@ UserInterfaceState.xcuserstate
 UserInterfaceState (Copia in conflitto di MacBook-Pro-di-Alessio-2 2013-12-05).xcuserstate
 VeespoTests.m
 Veespo.xccheckout
+lookback/API Documentation/LookbackRecordingViewController_h/Classes/LookbackRecordingViewController/index.html
+lookback/API Documentation/LookbackRecordingViewController_h/index.html
+lookback/API Documentation/LookbackSettingsViewController_h/Classes/LookbackSettingsViewController/index.html
+lookback/API Documentation/LookbackSettingsViewController_h/index.html
+lookback/API Documentation/Lookback_h/Categories/UIView_LookbackConcealing_/index.html
+lookback/API Documentation/Lookback_h/Categories/UIView_LookbackConcealing_/toc.html
+lookback/API Documentation/Lookback_h/Classes/Lookback/index.html
+lookback/API Documentation/Lookback_h/index.html
+lookback/API Documentation/Lookback_h/toc.html
+lookback/README.html
+lookback/README.md
