Improved Veespo Code part: - now target voted are "checkd" - improve search logic

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ lookback/API Documentation/Lookback_h/index.html
 lookback/API Documentation/Lookback_h/toc.html
 lookback/README.html
 lookback/README.md
+WorkspaceSettings.xcsettings
